// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lengths matches snapshot 1`] = `
Object {
  "1": "0.6rem",
  "2": "1.2rem",
  "3": "1.8rem",
  "4": "2.4rem",
}
`;

exports[`colors matches snapshot 1`] = `
Object {
  "blue": "#0000FF",
}
`;

exports[`defaultValue matches snapshot 1`] = `
Object {
  "": "0.1rem solid #FF0099",
}
`;

exports[`integers matches snapshot 1`] = `
Object {
  "1": 1,
  "2": 2,
  "3": 3,
  "4": 4,
}
`;

exports[`keywords matches snapshot 1`] = `
Object {
  "block": "block",
  "hide": "none",
}
`;
